# imagi-rs

./: README.md
backend/: Cargo.toml
backend/src/: handler.rs  main.rs  model.rs  response.rs
