[package]
name = "imagi-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
chrono = "0.4.38"
env_logger = "0.11.3"
serde = { version = "1.0.204", features = ["derive"] }
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4"] }
